fix(client): scrollbar fix

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -63,7 +63,7 @@ body {
 
 .books-list {
     overflow-y: auto;
-    height: calc(100vh - 140px);
+    height: calc(100vh - 184px);
 }
 
 .books-list table {
